# fiatdex

./: Anchor.toml  Cargo.toml  Readme.md  package.json
programs/fiatdex/: Cargo.toml
programs/fiatdex/src/: account_contexts.rs  consts.rs  error.rs  lib.rs
programs/fiatdex/src/instructions/: consume_order_events.rs  init_market.rs  init_open_order.rs  init_open_orders.rs  init_user_account.rs  mod.rs  new_maker_order.rs  new_market.rs  new_order.rs  new_taker_order.rs  settle.rs
programs/fiatdex/src/program_accounts/: auction.rs  market.rs  mod.rs  open_order.rs  open_orders.rs  user_account.rs
programs/fiatdex/src/types/: aob_bumps.rs  callback.rs  mod.rs  side.rs
tests/: client.js  fiatdex.ts
tests/sdk/: cranks.ts  index.ts  market.ts  user.ts  utils.ts
