[package]
name = "fiatdex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fiatdex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
# Right now this will use whatever the latest commit is on the master branch.
# Later on we can force it to stick to a specific commit if needed
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-dependencies-from-git-repositories
agnostic-orderbook = {git = "https://github.com/Bonfida/agnostic-orderbook.git"}
