[package]
name = "fiatdex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fiatdex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl="0.24.2"
agnostic-orderbook = {git = "https://github.com/antoineherzog/agnostic-orderbook", features = ["lib"], rev = "e96a0fd6020210cc290535dca7295378ef11ab8b"}
bytemuck = {version = "1.7.2", features= ["derive"]}
borsh = "0.9.1"
num-derive = "0.3.3"
